--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 psycopg2-binary==2.9.5
+PyJWT==2.6.0
 python-decouple==3.6
 python-dotenv==0.20.0
 SQLAlchemy==1.4.36
